--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+1.7.2 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 1.7.1 (2018-01-29)
 ------------------
 
