--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+1.7.3 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 1.7.2 (2018-03-01)
 ------------------
 
