--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+1.7.5 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 1.7.4 (2018-04-03)
 ------------------
 
