--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+1.7.6 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 1.7.5 (2018-04-05)
 ------------------
 
