--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+1.8.1 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 1.8.0 (2018-08-16)
 ------------------
 
