--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,6 +4,8 @@ Changelog
 1.9.1 (unreleased)
 ------------------
 
+- Add support for deploying via 'test kitchen' (http://kitchen.ci/)
+
 - Fixed deploying into "own" user (no service user defined in environment) when remote and local user names are different (#106809, wosc).
 
 
