--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+1.10.1 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 1.10.0 (2018-11-28)
 -------------------
 
