--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -4,8 +4,7 @@ Changelog
 1.10.1 (unreleased)
 -------------------
 
-- Nothing changed yet.
-
+- Download virtualenv directly from githup instead of using `pip download`. Using `pip download` makes no sense anymore, as does not only download anymore. (Thanks wosc)
 
 1.10.0 (2018-11-28)
 -------------------
