--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+1.10.2 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 1.10.1 (2019-01-31)
 -------------------
 
