--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,13 +5,13 @@ Changelog
 1.10.2 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Support IPv6-only addresses in `batou.utils.Address`
 
 
 1.10.1 (2019-01-31)
 -------------------
 
-- Download virtualenv directly from githup instead of using `pip download`. Using `pip download` makes no sense anymore, as does not only download anymore. (Thanks wosc)
+- Download virtualenv directly from github instead of using `pip download`. Using `pip download` makes no sense anymore, as does not only download anymore. (Thanks wosc)
 
 1.10.0 (2018-11-28)
 -------------------
