--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog
 =========
 
 
+1.11.1 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 1.11.0 (2019-04-23)
 -------------------
 
