Make fixtures reusable by calling ``pytest_plugins = 'batou.fixtures'``.
Using ``pytest_plugins = 'batou.conftest'`` sometimes leads to the error that
`py.test --fixtures` finds the fixtures but when the actual tests are run they
cannot be found.

See https://travis-ci.com/gocept/batou_scm/builds/122835744 as an example of
such an error.

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,10 +2,12 @@ Changelog
 =========
 
 
-1.11.1 (unreleased)
+1.12.0 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Make fixtures reusable by calling ``pytest_plugins = 'batou.fixtures'``
+  in code depending on them instead of importing from conftest.py which is not
+  suggested by pytest.
 
 
 1.11.0 (2019-04-23)
