--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -9,7 +9,7 @@ Changelog
   in code depending on them instead of importing from conftest.py which is not
   suggested by pytest.
 
-- Add convencience function to get active components for a host.
+- Add convenience functions to get active components for a host.
 
 - Security updates for multiple dependencies.
 
