--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog
 =========
 
 
+1.12.1 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 1.12.0 (2019-10-11)
 -------------------
 
