--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+2.0b2 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 2.0b1 (2019-10-11)
 ------------------
 
