--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+2.0b3 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 2.0b2 (2019-10-15)
 ------------------
 
