--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog
 1.12.1 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Fix updating direct references in requirements.txt (#22)
 
 
 1.12.0 (2019-10-11)
