--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog
 1.12.2 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Fix virtualenv creation on Python 2.7 (#25). Thanks icemac.
 
 
 1.12.1 (2020-01-08)
