--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog
 =========
 
 
+1.12.3 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 1.12.2 (2020-02-17)
 -------------------
 
