--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog
 1.12.3 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Install at least pip 10.0 so we officially support the `@ url` syntax from PEP 508 (#30)
 
 
 1.12.2 (2020-02-17)
