--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog
 =========
 
 
+1.12.5 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 1.12.4 (2020-03-27)
 -------------------
 
