--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -5,7 +5,7 @@ Changelog
 1.12.5 (unreleased)
 -------------------
 
-- Nothing changed yet.
+- Fix brown bag release: the test suite did _not_ complete succesfully for 1.12.4 and obviously things were broken. Connections to remote hosts now work properly again.
 
 
 1.12.4 (2020-03-27)
