--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,12 @@ Changelog
 =========
 
 
+1.13.1 (unreleased)
+-------------------
+
+- Nothing changed yet.
+
+
 1.13.0 (2020-04-17)
 -------------------
 
