fix bootstrap url

--- a/doc/source/user/install.txt
+++ b/doc/source/user/install.txt
@@ -15,7 +15,7 @@ A new project is started by placing the batou master command into the project an
     $ mkdir myproject
     $ cd myproject
     $ git init
-    $ curl -sL https://raw.githubusercontent.com/flyingcircusio/batou/master/bootstrap | sh
+    $ curl -sL https://raw.githubusercontent.com/flyingcircusio/batou/2.3b3/bootstrap | sh
     $ git commit -m "Start a batou project."
 
 Local
